css/mobile.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

:root {
/*-- Font Size --*/
    --title: 2.4rem;
    --product-name: 1.2rem;
    --product-discount: 1.4rem;
    --product-price: 1rem;
    --product-amount: 1.6rem;
    --info-class:1.4rem;
    --info-amount:1.5rem;
    --section-title: 1.4rem;
    --form-label: 1rem; --form-input: 1.2rem;
    --form-save: 1rem;
    --form-button: 1.6rem;
    --footer: 1.4rem;
/*-- Family Fonts --*/
    --montserrat: 'Montserrat', sans-serif; 
/*-- Colors --*/ 
    --color-one: #4e5150;
    --color-two: #f2994a;
    --color-three: #333333;
    --color-four: #e0e0e0;
    --color-five: #828282;
    --color-six: #f2f2f2;
    --color-seven: #bdbdbd;
    --color-eight: #4f4f4f;

}

html {
    font-family: var(--montserrat);
    font-size: 62.5%;
}

.page {
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.content {
    font-weight: 600;
}

.title {
    margin: 1em 0.5em;
    font-size: var(--title);
    color: var(--color-one);
    font-weight: 600;
}

.checkout {
    background-color: var(--color-six);
    border-radius: 12px;
    margin: 1em;
}

.list {

}

.item {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
}

.item__photo {
    padding: 3em;
    width: 20em;
    height: 20em;
}

.item__photo img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.item__details {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

.product {
    margin: 3.5em 0 auto;
}

.product__name {
    grid-area: 1 / 1 / 2 / 3;
    font-size: var(--product-name);
    color: var(--color-one);
    margin-bottom: 0.8em;
}

.product__discount {
    font-size: var(--product-discount);
    color: var(--color-two);
}

.product__price {
    font-size: var(--product-price);
    color: var(--color-one);
    text-decoration: line-through;
    padding-left: 0.5em;
}

.amount-button {
    position: relative;
    height: 4.5em;
    margin: auto 0 3em;
    border: 1px solid var(--color-five);
    border-radius: 12px;
    padding: 1em;
    width: 10em;
}

/*
.amount-button button:hover {
    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}
*/

.amount-button button:active {
    box-shadow: rgba(201, 198, 197, 0.50) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}

.amount-button__reduce, .amount-button__increase {
    position: absolute;
    background-color: var(--color-four);
    border-radius: 4px;
    text-decoration: none;
    outline: none;
    border: none;
    cursor: pointer;
    padding: 0.3em;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1000;
}

.amount-button__reduce svg, .amount-button__increase svg {
    width: 1em;
}

.amount-button__number {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: var(--product-amount);
    color: var(--color-three);
    font-weight: 600;
}

.amount-button__reduce {
    left: 1em;
}

.amount-button__increase {
    right: 1em;
}

.info {
    margin: 1em 2em 1em;
    padding: 1em;
    border-top: 1px solid var(--color-seven);
    display: flex;
    justify-content: space-between;
}

.checkout div:nth-child(3) {
    padding-bottom: 2em;
}


.info__class {
    font-size: var(--info-class);
    color: var(--color-three);
}

.info__amount {
    font-size: var(--info-amount);
    color: var(--color-three);
}

.information-form {
    position: relative;
    margin: 1em 1em 10em;
}

.form-group {
    margin: 2em 0.5em;
}

.section-title {
    font-size: var(--section-title);
    color: var(--color-three);
}

.form-section {
    margin: 1em 0;
}

.form-label {
    font-size: var(--form-label);
    color: var(--color-eight);
    line-height: 20px;
}

.form-control {
    position: relative;
    width: 100%;
    height: 4em;
    border: 1px solid var(--color-five);
    border-radius: 12px;
}

.form-control__icon {
    color: var(--color-five);
    position: absolute;
    width: 1.4em;
    height: 1.4em;
    top: 50%;
    left: 1em;
    transform: translateY(-50%);
}

.form-control__icon svg {
    width: 100%;
    height: 100%;
}

.form-control__input {
    font-size: var(--form-input);
    position: absolute;
    top: 50%;
    left: 54%;
    transform: translate(-50%, -50%);
    width: 85%;
    height: 2em;
    border: none;
    color: var(--color-three);
}

.form-control__input:focus {
    outline: none;
}

.double-column {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

.double-column .form-section:nth-child(1) {
    margin-right: 1em;
}

.double-column .form-section:nth-child(2) {
    margin-left: 1.4em;
}

.double-column .form-control__input {
    left: 58%;
    width: 72%;
}

.form-control__select {
    background-color: transparent;
}

.form-control__input::placeholder{
    color: var(--color-five)
}

.save-info {
    display: flex;
    align-items: center;
    font-size: var(--form-save);
    color: var(--color-eight);
    width: 100%;
}

.save-info input {
    width: 2em;
}

.save-info label {
    margin-left: 0.5em;
}

.continue-btn {
    position: absolute;
    bottom: -14.4%;
    right: 5%;
    width: 10em;
    height: 3.8em;
    cursor: pointer;
    color: white;
    background-color: var(--color-two);
    border-radius: 12px;
    outline: none;
    border: none;
    font-size: var(--form-button);
}

.continue-btn:hover {
    box-shadow: rgba(249, 103, 44, 0.35) 0px -50px 36px -28px inset;
}
/*
.amount-button button:hover {
    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}
*/

.continue-btn:active {
    box-shadow: rgba(234, 98, 7, 0.50) 0px 30px 60px -12px inset, rgba(239, 178, 107, 0.3) 0px 18px 36px -18px inset;
}

.footer {
    text-align: center;
    padding: 2em;
}

.footer, .footer a {
    color: var(--color-seven);
    font-size: var(--footer);
    font-weight: 600;
    text-decoration: none;
}

.footer a {
    font-weight: 700;
}

